# zx-spectrum-pico-dma

./: .gitmodules  README.md
firmware/: .gitignore
firmware/pico1/: CMakeLists.txt  gpios.h  zx_dma_pico1.c
firmware/pico2/: CMakeLists.txt  gpios.h  zx_dma_pico2.c
firmware_dual_picos/: .gitignore
firmware_dual_picos/pico1/: gpios.h  zx_dma_pico1.c
firmware_dual_picos/pico2/: gpios.h
firmware_rp2350b/: CMakeLists.txt  config_env.sh  gpios.h  zx_dma_rp2350b.c
pcb/: fp-lib-table  sym-lib-table  zx-spectrum-pico-dma.kicad_pcb  zx-spectrum-pico-dma.kicad_prl  zx-spectrum-pico-dma.kicad_pro  zx-spectrum-pico-dma.kicad_sch
pcb/fab1.0/: zx-spectrum-pico-dma-B_Cu.gbl  zx-spectrum-pico-dma-B_Mask.gbs  zx-spectrum-pico-dma-B_Paste.gbp  zx-spectrum-pico-dma-B_Silkscreen.gbo  zx-spectrum-pico-dma-Edge_Cuts.gm1  zx-spectrum-pico-dma-F_Cu.gtl  zx-spectrum-pico-dma-F_Mask.gts  zx-spectrum-pico-dma-F_Paste.gtp  zx-spectrum-pico-dma-F_Silkscreen.gto  zx-spectrum-pico-dma-NPTH-drl_map.gbr  zx-spectrum-pico-dma-NPTH.drl  zx-spectrum-pico-dma-PTH-drl_map.gbr  zx-spectrum-pico-dma-PTH.drl  zx-spectrum-pico-dma-job.gbrjob
test/: isr_border.c
